<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">1416447705289612</string>
    <string name="app_name">SocialNetworksSynchronizer</string>
    <string name="sync">Sync</string>
    <string name="vk">VK</string>
    <string name="fb">FB</string>
    <string name="phonebook">Contacts</string>
    <string name="settings">Settings</string>
    <string name="logout">Exit</string>
    <string name="back_button">Back</string>
    <string name="phonebook_icon">Phonebook icon</string>
    <string name="vk_icon">Vkontakte icon</string>
    <string name="fb_icon">Facebook icon</string>
    <string name="vk_friends">VK friends</string>
    <string name="fb_friends">FB friends</string>
    <string name="birthday">День рождения</string>
    <string name="services">Дополнительные сервисы (skype, twitter, etc.)</string>
    <string name="education">Образование</string>
    <string name="phone_numbers">Номера телефонов</string>
    <string name="vk_sync_params">Параметры синхронизации ВК</string>
    <string name="fb_sync_params">Параметры синхронизации FB</string>
    <string name="address">Контактный адрес</string>
    <string name="work">Место работы</string>
    <string name="apply">ОК</string>
    <string name="help_dialog_text">
    <![CDATA[
        <br><b>
         1) Sync - синхронизация с социальными сетями и нахождение соответствий между контактами <br><br>
         2) VK friends - отображение друзей VKontakte <br><br>
         3) FB friends - отображение друзей Facebook <br><br>
         4) Contacts - отображение синхронизированной телефонной книги <br><br>
         5) Settings - задание настроек для синхронизации<br><br>
         6) Exit - выход из приложения <br>
         <b><br>
    ]]>
    </string>

</resources>
