<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/phonebook_contact_border"
                android:layout_margin="3dp">

        <TextView
                android:id="@+id/pb_contact_name"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/pb_icon"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="4dp"
                android:background="@drawable/rect">
        </TextView>

        <ImageView
                android:id="@+id/pb_icon"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:padding="-8dp"
                android:layout_margin="1dp"
                android:src="@drawable/contact_icon"
                android:contentDescription="@string/phonebook_icon">
         </ImageView>

        <ImageView
                android:id="@+id/vk_icon"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_margin="1dp"
                android:layout_below="@+id/pb_contact_name"
                android:layout_alignParentLeft="true"
                android:src="@drawable/vke_icon"
                android:contentDescription="@string/vk_icon">
        </ImageView>

        <TextView
                android:id="@+id/vk_contact_name"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_below="@+id/pb_icon"
                android:layout_toRightOf="@+id/vk_icon"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="4dp"
                android:background="@drawable/rect">
        </TextView>


        <ImageView
                android:id="@+id/fb_icon"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_margin="1dp"
                android:layout_below="@+id/vk_icon"
                android:layout_alignParentLeft="true"
                android:src="@drawable/fb_icon"
                android:background="@android:color/darker_gray" android:contentDescription="@string/fb_icon">
        </ImageView>

        <TextView
                android:id="@+id/fb_contact_name"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:layout_below="@+id/vk_contact_name"
                android:layout_toRightOf="@+id/fb_icon"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="4dp"
                android:background="@drawable/rect">
        </TextView>

</RelativeLayout>